# Graphicus-02

./: CMakeLists.txt  README.MD
.github/workflows/: linux.yaml
src/: Canevas.cpp  Canevas.h  Carré.cpp  Carré.h  Cercle.cpp  Cercle.h  Couche.cpp  Couche.h  Forme.h  Polygone.cpp  Polygone.h  Rectangle.cpp  Rectangle.h  Vecteur.cpp  Vecteur.h
src/ObjectType/: LayerState.h
tests/: EXAMPLETEST.md  TestGraphicus.cpp  TestGraphicus.h
